2009-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-request-article): Allow mml-to-mime to generate MIME
	article without making inquiry to a user for unknown encoding.

	* nnmaildir.el (nnmaildir--group-maxnum, nnmaildir--new-number)
	(nnmaildir--scan): Assume i-node and device number that file-attributes
	returns might be cons-cell.

	* dgnushack.el: Autoload thing-at-point for XEmacs 21.5.

	* lpath.el: Fbind cp-supported-codepages for XEmacs 21.5.

2009-07-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Remove docs now in auth.texi.  Don't use
	`gnus-message' for logging.  Add new variables `auth-source-debug' and
	`auth-source-hide-passwords' and use them.

2009-07-15  Glenn Morris  <rgm@gnu.org>

	* gnus-spec.el (gnus-make-format-preserve-properties): Doc fix.

2009-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-rss-group): Strip newlines and
	excessive whitespace from the default values of title and description.

2009-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Use message-fetch-field instead of
	mail-fetch-field to fetch Content-Description header in order to
	exclude newlines.

2009-06-18  Ulrich Mueller  <ulm@gentoo.org>

	* pgg-gpg.el (pgg-gpg-lookup-key-owner): Handle colon listings
	format used by GnuPG 2.0.11.

2009-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Specify gnus-decoded as charset
	to deleted part.

2009-05-30  David Engster  <dengste@eml.cc>

	* nnmairix.el: Remove old documentation in the commentary block.
	(nnmairix-request-group): Do not update active file for nnml back ends.
	(nnmairix-retrieve-headers): Set gnus-nov-is-evil to t for nnimap back
	end so that overview files are ignored.
	(nnmairix-update-groups): Make updating the groups more robust by using
	marks.
	(nnmairix-determine-original-group-from-path): Circumvent mairix bug
	with dollar characters in message-id.
