@@ -1,3 +1,13 @@
+2009-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-article-mode-map): Bind the "e" key to
+	gnus-article-read-summary-keys rather than gnus-summary-edit-article
+	that should not be used for draft articles.
+	(gnus-article-read-summary-keys): Use key-binding instead of lookup-key
+	that has no concern in minor mode keys.
+	(gnus-article-summary-command, gnus-article-summary-command-nosave):
+	Abolish.
+
 2009-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* nnrss.el (nnrss-request-article): Allow mml-to-mime to generate MIME
